# tabularis-informix-plugin

./: .gitignore  .tabularium  Cargo.toml  README.md  manifest.json
.github/workflows/: ci.yml  release.yml
docs/: INSTALACION.md
src/: client.rs  config.rs  dllpath.rs  error.rs  main.rs  models.rs  rpc.rs
src/handlers/: crud.rs  ddl.rs  metadata.rs  mod.rs  query.rs
src/utils/: connstr.rs  identifiers.rs  mod.rs  pagination.rs  types.rs  values.rs
