[package]
name = "tabularis-informix-plugin"
version = "0.1.4"
edition = "2021"
description = "Tabularis driver plugin for IBM Informix (11.70+) over ODBC"
license = "Apache-2.0"
publish = false

[dependencies]
serde_json = "1"
odbc-api = "28"

# Windows-only: read the registered ODBC driver path so we can add the CSDK
# bin to the process DLL search path before loading the driver.
[target.'cfg(windows)'.dependencies]
winreg = "0.52"

[profile.release]
lto = true
codegen-units = 1
strip = "symbols"
